syntax = "proto3";

package user;

option go_package = "photobox-user/proto";

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (GetUserResponse);
    rpc GetMe (GetMeRequest) returns (UserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Signup (SignupRequest) returns (SignupResponse);
}

message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string password = 4;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    string user_id = 1;
    bool success = 2;
}

message UpdateUserRequest {
    string user_id = 1;
    string email = 2;
    string username = 3;
}

message GetMeRequest {}

message UserResponse {
    User user = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message SignupRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message SignupResponse {
    bool success = 1;
}
